--- a/index.html
+++ b/index.html
@@ -2,14 +2,31 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fork Me! FCC: Test Suite Template</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css">
   </head>
 
   <body>
-    <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
+    <!-- <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script> -->
+   <nav class="navbar navbar-light bg-light pr-5 pl-5">
+     <a href="#" class="navbar-brand text-dark">Mohamed and Xavier</a>
+     <ul class="navbar-nav d-flex">
+       <li class="nav-item">
+         <a href="" class="nav-link">Features</a>
+       </li>
+       <li class="nav-item">
+        <a href="" class="nav-link">How It Works</a>
+      </li>
+      <li class="nav-item">
+        <a href="" class="nav-link">Pricing</a>
+      </li>
+     </ul>
+   </nav>
 
-    hello world we are software developers!
     <script  src="js/index.js"></script>
   </body>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 </html>
