Mohammed added navbar

--- a/index.html
+++ b/index.html
@@ -10,20 +10,25 @@
 
   <body>
     <!-- <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script> -->
-   <nav class="navbar navbar-light bg-light pr-5 pl-5">
-     <a href="#" class="navbar-brand text-dark">Mohamed and Xavier</a>
-     <ul class="navbar-nav d-flex">
-       <li class="nav-item">
-         <a href="" class="nav-link">Features</a>
-       </li>
-       <li class="nav-item">
-        <a href="" class="nav-link">How It Works</a>
-      </li>
-      <li class="nav-item">
-        <a href="" class="nav-link">Pricing</a>
-      </li>
-     </ul>
-   </nav>
+    <header id="header">
+      <nav class="navbar navbar-light bg-light pr-5 pl-5">
+        <a href="$" class="navbar-brand">
+          <img src="/img/web-development-web-design-software-development-web-developer-png-favpng-mbCGqwpp8f0gqqSfgwXAsyQGq.jpg" alt="">
+          Mohamemed and Xavier
+        </a>
+        <ul class="navbar-nav d-flex flex-row justify-content-between">
+          <li class="nav-item pr-5">
+            <a href="" class="nav-link">Features</a>
+          </li>
+          <li class="nav-item pr-5">
+           <a href="" class="nav-link">How It Works</a>
+         </li>
+         <li class="nav-item">
+           <a href="" class="nav-link">Pricing</a>
+         </li>
+        </ul>
+      </nav>
+    </header>
 
     <script  src="js/index.js"></script>
   </body>
