--- a/index.html
+++ b/index.html
@@ -12,17 +12,20 @@
     <!-- <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script> -->
    <nav class="navbar navbar-light bg-light pr-5 pl-5">
      <a href="#" class="navbar-brand text-dark">Mohamed and Xavier</a>
-     <ul class="navbar-nav d-flex">
-       <li class="nav-item">
-         <a href="" class="nav-link">Features</a>
+     <div class="collapse navbar-collapse">
+      <ul class="navbar-nav d-flex">
+        <li class="nav-item">
+          <a href="" class="nav-link">Features</a>
+        </li>
+        <li class="nav-item">
+         <a href="" class="nav-link">How It Works</a>
        </li>
        <li class="nav-item">
-        <a href="" class="nav-link">How It Works</a>
-      </li>
-      <li class="nav-item">
-        <a href="" class="nav-link">Pricing</a>
-      </li>
-     </ul>
+         <a href="" class="nav-link">Pricing</a>
+       </li>
+      </ul>
+     </div>
+     
    </nav>
 
     <script  src="js/index.js"></script>
