Mohammed added pricing and footer

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <a href="" class="nav-link">Features</a>
           </li>
           <li class="nav-item pr-5">
-           <a href="" class="nav-link">How It Works</a>
+           <a href="#How-It-Works" class="nav-link">How It Works</a>
          </li>
          <li class="nav-item">
            <a href="" class="nav-link">Pricing</a>
@@ -78,6 +78,63 @@
       </div>
     </section>
     
+    <section id="How-It-Works">
+      <div class="row justify-content-center ">
+        <div class="embed-responsive embed-responsive-16by9 col-12 col-sm-5">
+          <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/3UK8ARg_xm4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+  
+        </div>
+      </div>
+    </section>
+
+    <section id="pricing">
+      <div class="container mt-5">
+        <div class="row">
+          <div class="col-12 col-sm-4">
+            <div class="card text-center">
+              <div class="card-header">Tenor Trombone</div>
+              <div class="card-body">
+                <h3>$600</h3>
+                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <button class="btn btn-warning">submit</button>
+              </div>
+            </div>
+          </div>
+          <div class="col-12 col-sm-4">
+            <div class="card text-center">
+              <div class="card-header">Bass Trombone</div>
+              <div class="card-body">
+                <h3>$900</h3>
+                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <button class="btn btn-warning">submit</button>
+              </div>
+            </div>
+          </div>
+          <div class="col-12 col-sm-4">
+            <div class="card text-center">
+              <div class="card-header">Valve Trombone</div>
+              <div class="card-body">
+                <h3>$1200</h3>
+                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <button class="btn btn-warning">submit</button>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <footer>
+      <div class="container mt-5 bg-secondary text-white">
+        <ul class="d-flex justify-content-end list-unstyled">
+          <li class="p-2">Privacy</li>
+          <li class="p-2">Terms</li>
+          <li class="p-2">Contact</li>
+        </ul>
+        <div class="d-flex justify-content-end">Copyright 2016, Original Trombones</div>
+      </div>
+    </footer>
+
 
     <script  src="js/index.js"></script>
   </body>
