--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -9,37 +10,40 @@
   </head>
 
   <body>
-    <!-- <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script> -->
+    <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
 
-    <header id="header">
-      <nav id="nav-bar" class="navbar navbar-light bg-light pr-5 pl-5 ">
+    <header id="header" class="mb-5">
+      <nav id="nav-bar" class="navbar navbar-light bg-light  ">
         <div class="container">
-          <a href="" class="navbar-brand">
-            <img id="header-img" class="mr-2" src="img/logo.jpg" width="40" height="40"  alt="">  Mohamemed and Xavier
+          <a href="#" class="navbar-brand">
+            <img id="header-img" width="100"  class="mr-2" src="https://cdn.freecodecamp.org/testable-projects-fcc/images/product-landing-page-logo.png" alt="original trombones logo">
+            Mohamemed and Xavier
           </a>  
         <ul class="navbar-nav d-flex flex-row justify-content-between">
           <li class="nav-item pr-5">
-            <a href="" class="nav-link">Features</a>
+            <a href="#features" class="nav-link">Features</a>
           </li>
           <li class="nav-item pr-5">
-           <a href="#How-It-Works" class="nav-link">How It Works</a>
+           <a href="#how" class="nav-link">How It Works</a>
          </li>
          <li class="nav-item">
-           <a href="" class="nav-link">Pricing</a>
+           <a href="#pricing" class="nav-link">Pricing</a>
          </li>
         </ul>
       </div>
       </nav>
     </header>
-
-    <div class="container mt-5">
+    <div class="handcrafted"></div>
+    <div class="container  mt-5">
       <div class="row justify-content-center">
         <div class="col-xm-12 col-sm-12 col-lg-6 text-center">
-          <form action="https://www.freecodecamp.com/email-submit" method="POST" id="form">
+          <form action="https://www.freecodecamp.com/email-submit"  id="form">
             <h4>Handcrafted, home-made masterpieces</h4>
-            <div class="form-group">
-              <input type="email" id="email" class="form-control"  placeholder="enter your email adress" required>
-              <button type="submit" class="btn btn-warning m-2"><strong>GET STARTED</strong></button>
+            <div class="form-group row justify-content-center"> 
+              <div class="col-8 col-sm-6 ">
+                <input type="email" id="email" class="form-control" name="email"  placeholder="enter your email adress" >
+                <input id="submit" type="submit"  class="btn btn-warning m-2" value="GET STARTED"></input>
+              </div>   
             </div>
           </form>
         </div>
@@ -47,41 +51,42 @@
     </div>
 
     <section id="features">
-      <div class="container mt-5">
-        <div class="row justify-content-center m-5">
-          <div class="col-12 col-sm-3 offset-sm-1">
-            <img id="header-img"  src="img/logo.jpg" width="100"   alt="">
-          </div>
-          <div class="col-auto">
-            <h4>Premium Materials</h4>
-            <p>Our trombones use the shiniest brass which is sourced locally. This will increase the longevity of your purchase.</p>
-          </div>
-        </div>
-        <div class="row justify-content-center m-5">
-          <div class="col-12 col-sm-3 offset-sm-1">
-            <img id="header-img"  src="img/logo.jpg" width="100"   alt="">
-          </div>
-          <div class="col-auto">
-            <h4>Fast Shipping</h4>
-            <p>We make sure you recieve your trombone as soon as we have finished making it. We also provide free returns if you are not satisfied.</p>
-          </div>
-        </div>
-        <div class="row justify-content-center m-5">
-          <div class="col-12 col-sm-3 offset-sm-1">
-            <img id="header-img"  src="img/logo.jpg" width="100"   alt="">
-          </div>
-          <div class="col-auto">
-            <h4>Quality Assurance</h4>
-            <p>For every purchase you make, we will ensure there are no damages or faults and we will check and test the pitch of your instrument.</p>
+      <div class="container">
+        <div class="row">
+          <div class="col-xl-10">
+            <div class="media m-sm-5 text-center">
+              <img  class="mr-sm-5 d-none d-sm-block" width="100"  src="img/logo.jpg"    alt="">
+              <div class="media-body mr-sm-5">
+                <h4>Premium Materials</h4>
+                  <p>Our trombones use the shiniest brass which is sourced locally. This will increase the longevity of your purchase.</p>
+              </div>
+            </div>
+            <div class="media m-sm-5 text-center">
+              <img  class="mr-sm-5 d-none d-sm-block" width="100"  src="img/logo.jpg"    alt="">
+              <div class="media-body mr-sm-5">
+                <h4>Fast Shipping</h4>
+                <p>We make sure you recieve your trombone as soon as we have finished making it. We also provide free returns if you are not satisfied.</p>
+              </div>
+            </div>
+            <div class="media m-sm-5 text-center">
+              <img  class="mr-5 d-none d-sm-block" width="100"  src="img/logo.jpg"    alt="">
+              <div class="media-body mr-sm-5">
+                <h4>Premium Materials</h4>
+                  <p>Our trombones use the shiniest brass which is sourced locally. This will increase the longevity of your purchase.</p>
+              </div>
+            </div>
           </div>
         </div>
+
+        
+      </div>
       </div>
     </section>
     
-    <section id="How-It-Works">
-      <div class="row justify-content-center ">
+    <section id="how">
+      <div class="row justify-content-center m-2">
         <div class="embed-responsive embed-responsive-16by9 col-12 col-sm-5">
-          <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/3UK8ARg_xm4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          <iframe id="video" class="embed-responsive-item" src="https://www.youtube.com/embed/3UK8ARg_xm4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
   
         </div>
       </div>
@@ -91,7 +96,7 @@
       <div class="container mt-5">
         <div class="row">
           <div class="col-12 col-sm-4">
-            <div class="card text-center">
+            <div class="card text-center mb-3">
               <div class="card-header">Tenor Trombone</div>
               <div class="card-body">
                 <h3>$600</h3>
@@ -101,7 +106,7 @@
             </div>
           </div>
           <div class="col-12 col-sm-4">
-            <div class="card text-center">
+            <div class="card text-center mb-3">
               <div class="card-header">Bass Trombone</div>
               <div class="card-body">
                 <h3>$900</h3>
@@ -110,7 +115,7 @@
               </div>
             </div>
           </div>
-          <div class="col-12 col-sm-4">
+          <div class="col-12 col-sm-4 mb-3">
             <div class="card text-center">
               <div class="card-header">Valve Trombone</div>
               <div class="card-body">
@@ -134,10 +139,10 @@
         <div class="d-flex justify-content-end">Copyright 2016, Original Trombones</div>
       </div>
     </footer>
-
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 
     <script  src="js/index.js"></script>
   </body>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+
 </html>
